--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,15 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+
+<!-- Add for Firebase Auth: https://pub.dev/packages/firebase_auth -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -97,5 +106,21 @@
       loadMainDartJs();
     }
   </script>
+
+<script>
+
+  var firebaseConfig = {
+    apiKey: "AIzaSyC4P6qmoXGQmo4hWQXs0JFW8YqWwd48cUU",
+    authDomain: "home-brewery-cedc5.firebaseapp.com",
+    projectId: "home-brewery-cedc5",
+    storageBucket: "home-brewery-cedc5.appspot.com",
+    messagingSenderId: "1098197488288",
+    appId: "1:1098197488288:web:c1c4e2da42d5721728efc5",
+    measurementId: "G-7ECXQ9YQ60"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+</script>
+
 </body>
 </html>
